--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,74 +1,70 @@
 # Core FastAPI and Web Framework
-fastapi
-uvicorn
-requests
-beautifulsoup4
-pydantic
-httpx
-
+fastapi==0.111.0
+uvicorn==0.30.1
+requests==2.32.3
+beautifulsoup4==4.12.3
+pydantic==2.7.3
+httpx==0.27.0
 # AI and Language Models
-google-generativeai
+google-generativeai==0.5.4
 
 # Environment and Configuration
-python-dotenv
-
+python-dotenv==1.0.1
 # GitHub Integration
-PyGithub
+PyGithub==2.3.0
 
 # Security Scanning Tools
-bandit
-safety
+bandit==1.7.8
+safety==3.2.0
 
 # Network and DNS
-dnspython
-
+dnspython==2.6.1
 # Git Operations
-GitPython
+GitPython==3.1.43
 
 # RAG Database and Vector Store
-langchain
-langchain-community
-langchain-chroma
-langchain-huggingface
-sentence-transformers
-chromadb
+langchain==0.2.3
+langchain-community==0.2.3
+langchain-chroma==0.2.3
+langchain-huggingface==0.2.3
+sentence-transformers==2.7.0
+chromadb==0.5.0
 tensorflow==2.15.0
 transformers==4.36.0
-tf-keras
+tf-keras==2.15.0
 
 # Document Processing
-pypdf
-python-docx
+pypdf==4.2.0
+python-docx==1.1.2
 
 # Token Management
-tiktoken
+tiktoken==0.7.0
 
 # Data Processing and Analysis
-pandas
-numpy
-
+pandas==2.2.2
+numpy==1.26.4
 # Async Operations
-aiofiles
-aiohttp
+aiofiles==23.2.1
+aiohttp==3.9.5
 
 # Text Processing
-nltk
-regex
+nltk==3.8.1
+regex==2024.5.15
 
 # Database (if needed for future features)
-sqlalchemy
-alembic
+sqlalchemy==2.0.30
+alembic==1.13.1
 
 # Testing (optional but recommended)
-pytest
-pytest-asyncio
+pytest==8.2.2
+pytest-asyncio==0.23.7
 
 # Code Quality
 black
-flake8
+black==24.4.2
+flake8==7.0.0
 
 # Additional Utilities
-colorama
-tqdm
-rich
-langchain-huggingface
+colorama==0.4.6
+tqdm==4.66.4
+rich==13.7.1
