--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,29 +1,28 @@
 # Core FastAPI and Web Framework
-fastapi
-uvicorn
-requests
-beautifulsoup4
-pydantic
-httpx
-
+fastapi==0.116.1
+uvicorn==0.35.0
+requests==2.32.3
+beautifulsoup4==4.13.4
+pydantic==2.9.2
+httpx==0.28.1
 # AI and Language Models
 google-generativeai
 
 # Environment and Configuration
-python-dotenv
+python-dotenv==1.1.1
 
 # GitHub Integration
-PyGithub
+PyGithub==2.6.1
 
 # Security Scanning Tools
-bandit
-safety
+bandit==1.8.6
+safety==3.3.0
 
 # Network and DNS
-dnspython
+dnspython==2.7.0
 
 # Git Operations
-GitPython
+GitPython==3.1.45
 
 # Langchain and related
 langchain
@@ -33,7 +32,7 @@ langchain-huggingface
 langchain-google-genai
 
 # NLP and ML
-sentence-transformers
+sentence-transformers==5.0.0
 regex==2024.5.15
 
 # Testing and Linting
@@ -41,3 +40,5 @@ pytest==8.2.2
 pytest-asyncio==0.23.7
 black==24.4.2
 flake8==7.0.0
+docker==7.0.0
+playwright==1.44.0
