--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,24 @@ AWS_ACCESS_KEY_ID=your_access_key_here
 AWS_SECRET_ACCESS_KEY=your_secret_key_here
 AWS_REGION=us-east-1
 S3_BUCKET_NAME=your-bucket-name
+
+# ==================== STRIPE CONNECT CONFIGURATION ====================
+# For accepting payments in generated apps
+# Get these from: https://dashboard.stripe.com/apikeys
+
+# Your platform's Stripe keys (NOT the connected account keys)
+STRIPE_SECRET_KEY=sk_test_your_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
+
+# Webhook signing secret (from Stripe Dashboard > Webhooks)
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Stripe Connect Client ID (from Stripe Dashboard > Connect > Settings)
+STRIPE_CONNECT_CLIENT_ID=ca_your_client_id_here
+
+# Optional: Platform fee percentage (0-100, default 0)
+# Set this to take a cut of each transaction
+PLATFORM_FEE_PERCENT=0
+
+# Frontend URL for Stripe redirects
+FRONTEND_URL=http://localhost:3000
