--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@openai/agents": "^0.3.1",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "esbuild": "^0.27.2",
     "ogl": "^1.0.11",
     "three": "^0.179.1"
   },
